# RAGAS-NLP-SQLqueries-postgres

./: .gitignore  README.md  pyproject.toml
scripts/: embed_schema_and_examples.py
src/: exceptions.py
src/config/: settings.py
src/db/: config.py  executor.py
src/eval/: evaluator.py
src/models/: llm.py
src/rag/: retriever.py
src/ui/: app.py
src/utils/: logger.py  rate_limiter.py  validator.py
tests/: conftest.py  test_config.py  test_executor.py  test_llm.py  test_rate_limiter.py  test_retriever.py  test_validator.py
